# Stm32Lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32F407VG.cmake  STM32F429NI.cmake  run.jdebug  run429.jdebug  runDefTest.jdebug  runM.jdebug
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Drivers/STM32F4xx_StdPeriph_Driver/src/: misc.c  stm32f4xx_adc.c  stm32f4xx_can.c  stm32f4xx_cryp.c  stm32f4xx_dac.c  stm32f4xx_dbgmcu.c  stm32f4xx_dcmi.c  stm32f4xx_dma.c  stm32f4xx_dma2d.c  stm32f4xx_exti.c  stm32f4xx_flash.c
Examples/: CMakeLists.txt  sample1.c  sample2.c  sample3.c  sample4.c  sample5.c  uartSample1.c  uartSample2.c
Examples/dac/: CMakeLists.txt  dacTest1.c
Examples/nextion/: CMakeLists.txt  nextionSample.c  nextion_manager.c
Examples/uart/: CMakeLists.txt
def/: CMakeLists.txt  defTest.c
def/inc/: def_lib.h
def/src/: def_lib.c
nextion/: CMakeLists.txt
uart/: CMakeLists.txt  NextionTest.c  main.c  test.c
uart/inc/: uart_buffer.h  uart_driver.h  uart_manager.h
uart/src/: main.c  nextion_manager.c  uart_buffer.c  uart_driver.c  uart_logger.c  uart_manager.c
uart_dma/src/: main.c
utils/: printf.c  queue.c  queue.h  stm32f4xx_conf.h
